--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python setup.py install
-          pip install pytest
+          pip install pytest black isort
       - name: Run tests with pytest
         run: python -m pytest
       - name: check formating with black
