--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Run Tests
+name: Tests
 
 on: [push, pull_request]
 
@@ -14,8 +14,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python setup.py install
-          pip install pytest black isort
+          pip install -e ".[test,lint]"
       - name: Run tests with pytest
         run: python -m pytest
       - name: check formating with black
